--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
-  <title>The HTML5 Herald</title>
+<link href="https://fonts.googleapis.com/css?family=Bree+Serif|Quicksand|Work+Sans" rel="stylesheet">
+  <title>TAPP Pumbling | Home</title>
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="stylesheet" href="style.css">
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -17,14 +17,14 @@
 
 <body>
   <script src="js/scripts.js"></script>
-<div>
+<div class="overlay">
  <nav>
   <ul>
     <li>What We Do</li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>About Us</li>
+    <li>Where We Service</li>
+    <li>Past Work</li>
+    <li>Blog</li>
   </ul>
  </nav> 
 </div>
