--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-<link href="https://fonts.googleapis.com/css?family=Bree+Serif|Quicksand|Work+Sans" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Bree+Serif|Merriweather|Lobster|Quicksand|Work+Sans" rel="stylesheet">
   <title>TAPP Pumbling | Home</title>
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
@@ -19,6 +19,11 @@
   <script src="js/scripts.js"></script>
 <div class="overlay">
  <nav>
+  <div class="logo">
+  <h1>TAPP Plumbing</h1>
+    <h2 id="phone">Give us a call: 678-618-0498</h2>
+  </div>
+
   <ul>
     <li>What We Do</li>
     <li>About Us</li>
@@ -28,8 +33,23 @@
   </ul>
  </nav> 
 </div>
-
-
+<div class="main">
+  <div class="col-1">
+    <img src="We.png">
+    <h3>We are..</h3>
+    <p>Dedicated to providing the highest quality service for all of your plumbing needs, from leak repairs to new installations. The attention to detail that is provided by my wife Renee, and I at each appointment offers our customers a unique and pleasant service experience- at a fair, affordable upfront price. We take personal pride in quality workmanship and provide complete and lasting plumbing solutions for any plumbing problem</p>
+  </div>
+  <div class="col-2">
+    <img src="You.png">
+    <h3>You may..</h3>
+    <p>Realize there are many plumbers capable of syour basic faucet repair, cleaning your sink drains or completely rebuilding your kitchen sink plumbing. When calling Tapp Plumbing you will find out what sets us apart from the competition, it’s our ability to provide all types of plumbing services from a simple toilet repair to installing your new gas or electric water heater always with a smile, as opposed to the typical grumpy under-trained “technician” who is actually learning on your job.</p>
+  </div>
+  <div class="col-3">
+    <img src="Help.png">
+    <h3>If you need help with..</h3>
+    <p>Pipe repairs, cleaning clogged drains, or a water heater installation, we strive to be the best local plumber. We provide what we feel is the highest quality customer service possible for all of your plumbing problems including faucet repairs, toilet repair and water heater repairs. We can even provide a video camera inspection. We are a BBB accredited business with an A+ rating. Feel free to call Joe & Renee at Tapp Plumbing  for all your plumbing needs 678-618-0498. </p>
+  </div>
+</div>
 
 </body>
 </html>
